@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,6 +9,7 @@
  *     IBM Corporation - initial API and implementation
  *     Benjamin Muskalla <b.muskalla@gmx.net>
  *     - Fix for bug 172574 - [IDE] DeleteProjectDialog inconsequent selection behavior
+ *     Andrey Loskutov <loskutov@gmx.de> - Bug 41431, 462760
  *******************************************************************************/
 package org.eclipse.ui.actions;
 
@@ -62,21 +63,21 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	static class DeleteProjectDialog extends MessageDialog {
 
-		private IResource[] projects;
+		private List<? extends IResource> projects;
 
-		private boolean deleteContent = false;
+		private boolean deleteContent;
 
 		/**
 		 * Control testing mode. In testing mode, it returns true to delete
 		 * contents and does not pop up the dialog.
 		 */
-		private boolean fIsTesting = false;
+		private boolean fIsTesting;
 
 		private Button radio1;
 
 		private Button radio2;
 
-		DeleteProjectDialog(Shell parentShell, IResource[] projects) {
+		DeleteProjectDialog(Shell parentShell, List<? extends IResource> projects) {
 			super(parentShell, getTitle(projects), null, // accept the
 					// default window
 					// icon
@@ -88,16 +89,16 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			setShellStyle(getShellStyle() | SWT.SHEET);
 		}
 
-		static String getTitle(IResource[] projects) {
-			if (projects.length == 1) {
+		static String getTitle(List<? extends IResource> projects) {
+			if (projects.size() == 1) {
 				return IDEWorkbenchMessages.DeleteResourceAction_titleProject1;
 			}
 			return IDEWorkbenchMessages.DeleteResourceAction_titleProjectN;
 		}
 
-		static String getMessage(IResource[] projects) {
-			if (projects.length == 1) {
-				IProject project = (IProject) projects[0];
+		static String getMessage(List<? extends IResource> projects) {
+			if (projects.size() == 1) {
+				IProject project = (IProject) projects.get(0);
 				return NLS
 						.bind(
 								IDEWorkbenchMessages.DeleteResourceAction_confirmProject1,
@@ -105,17 +106,13 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			}
 			return NLS.bind(
 					IDEWorkbenchMessages.DeleteResourceAction_confirmProjectN,
-					new Integer(projects.length));
+					Integer.valueOf((projects.size())));
 		}
 
-		/*
-		 * (non-Javadoc) Method declared on Window.
-		 */
 		@Override
 		protected void configureShell(Shell newShell) {
 			super.configureShell(newShell);
-			PlatformUI.getWorkbench().getHelpSystem().setHelp(newShell,
-					IIDEHelpContextIds.DELETE_PROJECT_DIALOG);
+			PlatformUI.getWorkbench().getHelpSystem().setHelp(newShell, IIDEHelpContextIds.DELETE_PROJECT_DIALOG);
 		}
 
 		@Override
@@ -125,8 +122,8 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			radio1 = new Button(composite, SWT.RADIO);
 			radio1.addSelectionListener(selectionListener);
 			String text1;
-			if (projects.length == 1) {
-				IProject project = (IProject) projects[0];
+			if (projects.size() == 1) {
+				IProject project = (IProject) projects.get(0);
 				if (project == null || project.getLocation() == null) {
 					text1 = IDEWorkbenchMessages.DeleteResourceAction_deleteContentsN;
 				} else {
@@ -140,7 +137,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			}
 			radio1.setText(text1);
 			radio1.setFont(parent.getFont());
-			
+
 			// Add explanatory label that the action cannot be undone.
 			// We can't put multi-line formatted text in a radio button,
 			// so we have to create a separate label.
@@ -192,11 +189,6 @@ public class DeleteResourceAction extends SelectionListenerAction {
 			return deleteContent;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.window.Window#open()
-		 */
 		@Override
 		public int open() {
 			// Override Window#open() to allow for non-interactive testing.
@@ -210,7 +202,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 		/**
 		 * Set this delete dialog into testing mode. It won't pop up, and it
 		 * returns true for deleteContent.
-		 * 
+		 *
 		 * @param t
 		 *            the testing mode
 		 */
@@ -222,27 +214,26 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	/**
 	 * The id of this action.
 	 */
-	public static final String ID = PlatformUI.PLUGIN_ID
-			+ ".DeleteResourceAction";//$NON-NLS-1$
-	
-	private IShellProvider shellProvider = null;
+	public static final String ID = PlatformUI.PLUGIN_ID + ".DeleteResourceAction";//$NON-NLS-1$
+
+	private IShellProvider shellProvider;
 
 	/**
 	 * Whether or not we are deleting content for projects.
 	 */
-	private boolean deleteContent = false;
+	private boolean deleteContent;
 
 	/**
 	 * Flag that allows testing mode ... it won't pop up the project delete
 	 * dialog, and will return "delete all content".
 	 */
-	protected boolean fTestingMode = false;
+	protected boolean fTestingMode;
 
 	private String[] modelProviderIds;
 
 	/**
 	 * Creates a new delete resource action.
-	 * 
+	 *
 	 * @param shell
 	 *            the shell for any dialogs
 	 * @deprecated Should take an IShellProvider, see
@@ -263,7 +254,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Creates a new delete resource action.
-	 * 
+	 *
 	 * @param provider
 	 *            the shell provider to use. Must not be <code>null</code>.
 	 * @since 3.4
@@ -274,43 +265,42 @@ public class DeleteResourceAction extends SelectionListenerAction {
 		initAction();
 		setShellProvider(provider);
 	}
-	
+
 	/**
 	 * Action initialization.
 	 */
 	private void initAction() {
 		setToolTipText(IDEWorkbenchMessages.DeleteResourceAction_toolTip);
-		PlatformUI.getWorkbench().getHelpSystem().setHelp(this,
-				IIDEHelpContextIds.DELETE_RESOURCE_ACTION);
+		PlatformUI.getWorkbench().getHelpSystem().setHelp(this, IIDEHelpContextIds.DELETE_RESOURCE_ACTION);
 		setId(ID);
 	}
-	
+
 	private void setShellProvider(IShellProvider provider) {
 		shellProvider = provider;
 	}
 
 	/**
 	 * Returns whether delete can be performed on the current selection.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the resources can be deleted, and
 	 *         <code>false</code> if the selection contains non-resources or
 	 *         phantom resources
 	 */
-	private boolean canDelete(IResource[] resources) {
+	private boolean canDelete(List<? extends IResource> resources) {
 		// allow only projects or only non-projects to be selected;
 		// note that the selection may contain multiple types of resource
 		if (!(containsOnlyProjects(resources) || containsOnlyNonProjects(resources))) {
 			return false;
 		}
 
-		if (resources.length == 0) {
+		if (resources.isEmpty()) {
 			return false;
 		}
 		// Return true if everything in the selection exists.
-		for (int i = 0; i < resources.length; i++) {
-			IResource resource = resources[i];
+		for (int i = 0; i < resources.size(); i++) {
+			IResource resource = resources.get(i);
 			if (resource.isPhantom()) {
 				return false;
 			}
@@ -320,15 +310,15 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Returns whether the selection contains linked resources.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the resources contain linked resources,
 	 *         and <code>false</code> otherwise
 	 */
-	private boolean containsLinkedResource(IResource[] resources) {
-		for (int i = 0; i < resources.length; i++) {
-			IResource resource = resources[i];
+	private boolean containsLinkedResource(List<? extends IResource> resources) {
+		for (int i = 0; i < resources.size(); i++) {
+			IResource resource = resources.get(i);
 			if (resource.isLinked()) {
 				return true;
 			}
@@ -338,13 +328,13 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Returns whether the selection contains only non-projects.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the resources contains only non-projects,
 	 *         and <code>false</code> otherwise
 	 */
-	private boolean containsOnlyNonProjects(IResource[] resources) {
+	private boolean containsOnlyNonProjects(List<? extends IResource> resources) {
 		int types = getSelectedResourceTypes(resources);
 		// check for empty selection
 		if (types == 0) {
@@ -356,13 +346,13 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Returns whether the selection contains only projects.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the resources contains only projects, and
 	 *         <code>false</code> otherwise
 	 */
-	private boolean containsOnlyProjects(IResource[] resources) {
+	private boolean containsOnlyProjects(List<? extends IResource> resources) {
 		int types = getSelectedResourceTypes(resources);
 		// note that the selection may contain multiple types of resource
 		return types == IResource.PROJECT;
@@ -370,35 +360,35 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Asks the user to confirm a delete operation.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the user says to go ahead, and
 	 *         <code>false</code> if the deletion should be abandoned
 	 */
-	private boolean confirmDelete(IResource[] resources) {
+	private boolean confirmDelete(List<? extends IResource> resources) {
 		if (containsOnlyProjects(resources)) {
 			return confirmDeleteProjects(resources);
 		}
 		return confirmDeleteNonProjects(resources);
-		
+
 	}
 
 	/**
 	 * Asks the user to confirm a delete operation, where the selection contains
 	 * no projects.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the user says to go ahead, and
 	 *         <code>false</code> if the deletion should be abandoned
 	 */
-	private boolean confirmDeleteNonProjects(IResource[] resources) {
+	private boolean confirmDeleteNonProjects(List<? extends IResource> resources) {
 		String title;
 		String msg;
-		if (resources.length == 1) {
+		if (resources.size() == 1) {
 			title = IDEWorkbenchMessages.DeleteResourceAction_title1;
-			IResource resource = resources[0];
+			IResource resource = resources.get(0);
 			if (resource.isLinked()) {
 				msg = NLS
 						.bind(
@@ -415,11 +405,11 @@ public class DeleteResourceAction extends SelectionListenerAction {
 				msg = NLS
 						.bind(
 								IDEWorkbenchMessages.DeleteResourceAction_confirmLinkedResourceN,
-								new Integer(resources.length));
+						Integer.valueOf(resources.size()));
 			} else {
 				msg = NLS.bind(
 						IDEWorkbenchMessages.DeleteResourceAction_confirmN,
-						new Integer(resources.length));
+						new Integer(resources.size()));
 			}
 		}
 		return MessageDialog.openQuestion(shellProvider.getShell(), title, msg);
@@ -428,13 +418,13 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	/**
 	 * Asks the user to confirm a delete operation, where the selection contains
 	 * only projects. Also remembers whether project content should be deleted.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 * @return <code>true</code> if the user says to go ahead, and
 	 *         <code>false</code> if the deletion should be abandoned
 	 */
-	private boolean confirmDeleteProjects(IResource[] resources) {
+	private boolean confirmDeleteProjects(List<? extends IResource> resources) {
 		DeleteProjectDialog dialog = new DeleteProjectDialog(shellProvider.getShell(), resources);
 		dialog.setTestingMode(fTestingMode);
 		int code = dialog.open();
@@ -442,48 +432,31 @@ public class DeleteResourceAction extends SelectionListenerAction {
 		return code == 0; // YES
 	}
 
-
-
-
-	/**
-	 * Return an array of the currently selected resources.
-	 * 
-	 * @return the selected resources
-	 */
-	private IResource[] getSelectedResourcesArray() {
-		List selection = getSelectedResources();
-		IResource[] resources = new IResource[selection.size()];
-		selection.toArray(resources);
-		return resources;
-	}
-
 	/**
 	 * Returns a bit-mask containing the types of resources in the selection.
-	 * 
+	 *
 	 * @param resources
 	 *            the selected resources
 	 */
-	private int getSelectedResourceTypes(IResource[] resources) {
+	private int getSelectedResourceTypes(List<? extends IResource> resources) {
 		int types = 0;
-		for (int i = 0; i < resources.length; i++) {
-			types |= resources[i].getType();
+		for (int i = 0; i < resources.size(); i++) {
+			types |= resources.get(i).getType();
 		}
 		return types;
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IAction.
-	 */
 	@Override
 	public void run() {
-		final IResource[] resources = getSelectedResourcesArray();
+		final List<? extends IResource> resources = getSelectedResources();
 
 		if (!fTestingMode) {
 			if (LTKLauncher.openDeleteWizard(getStructuredSelection())) {
+				CloseResourceAction.closeMatchingEditors(resources, true);
 				return;
 			}
 		}
-		
+
 		// WARNING: do not query the selected resources more than once
 		// since the selection may change during the run,
 		// e.g. due to window activation when the prompt dialog is dismissed.
@@ -495,28 +468,18 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 		Job deletionCheckJob = new Job(IDEWorkbenchMessages.DeleteResourceAction_checkJobName) {
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.core.runtime.jobs.Job#run(org.eclipse.core.runtime.IProgressMonitor)
-			 */
 			@Override
 			protected IStatus run(IProgressMonitor monitor) {
-				if (resources.length == 0)
+				if (resources.isEmpty()) {
 					return Status.CANCEL_STATUS;
+				}
 				scheduleDeleteJob(resources);
 				return Status.OK_STATUS;
 			}
-			
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.core.runtime.jobs.Job#belongsTo(java.lang.Object)
-			 */
+
 			@Override
 			public boolean belongsTo(Object family) {
-				if (IDEWorkbenchMessages.DeleteResourceAction_jobName
-						.equals(family)) {
+				if (IDEWorkbenchMessages.DeleteResourceAction_jobName.equals(family)) {
 					return true;
 				}
 				return super.belongsTo(family);
@@ -529,19 +492,19 @@ public class DeleteResourceAction extends SelectionListenerAction {
 
 	/**
 	 * Schedule a job to delete the resources to delete.
-	 * 
+	 *
 	 * @param resourcesToDelete
 	 */
-	private void scheduleDeleteJob(final IResource[] resourcesToDelete) {
+	private void scheduleDeleteJob(final List<? extends IResource> resourcesToDelete) {
 		// use a non-workspace job with a runnable inside so we can avoid
 		// periodic updates
-		Job deleteJob = new Job(
-				IDEWorkbenchMessages.DeleteResourceAction_jobName) {
+		Job deleteJob = new Job(IDEWorkbenchMessages.DeleteResourceAction_jobName) {
 			@Override
 			public IStatus run(final IProgressMonitor monitor) {
 				try {
-					final DeleteResourcesOperation op = 
-						new DeleteResourcesOperation(resourcesToDelete, IDEWorkbenchMessages.DeleteResourceAction_operationLabel, deleteContent);
+					final DeleteResourcesOperation op =
+						new DeleteResourcesOperation(resourcesToDelete.toArray(new IResource[resourcesToDelete.size()]),
+								IDEWorkbenchMessages.DeleteResourceAction_operationLabel, deleteContent);
 					op.setModelProviderIds(getModelProviderIds());
 					// If we are deleting projects and their content, do not
 					// execute the operation in the undo history, since it cannot be
@@ -552,17 +515,13 @@ public class DeleteResourceAction extends SelectionListenerAction {
 						// or validation checking occurs.  Do it in a syncExec because
 						// we are calling this from a Job.
 						WorkbenchJob statusJob = new WorkbenchJob("Status checking"){ //$NON-NLS-1$
-							/* (non-Javadoc)
-							 * @see org.eclipse.ui.progress.UIJob#runInUIThread(org.eclipse.core.runtime.IProgressMonitor)
-							 */
 							@Override
-							public IStatus runInUIThread(
-									IProgressMonitor monitor) {
-								return op.computeExecutionStatus(monitor);
+							public IStatus runInUIThread(IProgressMonitor m) {
+								return op.computeExecutionStatus(m);
 							}
-							
+
 						};
-						
+
 						statusJob.setSystem(true);
 						statusJob.schedule();
 						try {//block until the status is ready
@@ -570,32 +529,26 @@ public class DeleteResourceAction extends SelectionListenerAction {
 						} catch (InterruptedException e) {
 							//Do nothing as status will be a cancel
 						}
-						
+
 						if (statusJob.getResult().isOK()) {
 							return op.execute(monitor, WorkspaceUndoUtil.getUIInfoAdapter(shellProvider.getShell()));
-						} 
+						}
 						return statusJob.getResult();
 					}
 					return PlatformUI.getWorkbench().getOperationSupport()
-							.getOperationHistory().execute(op, monitor, 
+							.getOperationHistory().execute(op, monitor,
 							WorkspaceUndoUtil.getUIInfoAdapter(shellProvider.getShell()));
 				} catch (ExecutionException e) {
 					if (e.getCause() instanceof CoreException) {
 						return ((CoreException)e.getCause()).getStatus();
-					} 
+					}
 					return new Status(IStatus.ERROR, IDEWorkbenchPlugin.IDE_WORKBENCH, e.getMessage(),e);
 				}
 			}
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see org.eclipse.core.runtime.jobs.Job#belongsTo(java.lang.Object)
-			 */
 			@Override
 			public boolean belongsTo(Object family) {
-				if (IDEWorkbenchMessages.DeleteResourceAction_jobName
-						.equals(family)) {
+				if (IDEWorkbenchMessages.DeleteResourceAction_jobName.equals(family)) {
 					return true;
 				}
 				return super.belongsTo(family);
@@ -613,14 +566,13 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 */
 	@Override
 	protected boolean updateSelection(IStructuredSelection selection) {
-		return super.updateSelection(selection)
-				&& canDelete(getSelectedResourcesArray());
+		return super.updateSelection(selection) && canDelete(getSelectedResources());
 	}
 
 	/**
 	 * Returns the model provider ids that are known to the client that
 	 * instantiated this operation.
-	 * 
+	 *
 	 * @return the model provider ids that are known to the client that
 	 *         instantiated this operation.
 	 * @since 3.2
@@ -633,7 +585,7 @@ public class DeleteResourceAction extends SelectionListenerAction {
 	 * Sets the model provider ids that are known to the client that
 	 * instantiated this operation. Any potential side effects reported by these
 	 * models during validation will be ignored.
-	 * 
+	 *
 	 * @param modelProviderIds
 	 *            the model providers known to the client who is using this
 	 *            operation.
